--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-   <h1>Привет мир</h1>
+   <h1>Привет мир!</h1>
+<h2>Это первое задание</h2>
 </body>
 </html>
